sources += [
	'aig/aig/aigCheck.c',
	'aig/aig/aigCanon.c',
	'aig/aig/aigCuts.c',
	'aig/aig/aigDfs.c',
	'aig/aig/aigDup.c',
	'aig/aig/aigFanout.c',
	'aig/aig/aigFrames.c',
	'aig/aig/aigInter.c',
	'aig/aig/aigJust.c',
	'aig/aig/aigMan.c',
	'aig/aig/aigMem.c',
	'aig/aig/aigMffc.c',
	'aig/aig/aigObj.c',
	'aig/aig/aigOper.c',
	'aig/aig/aigOrder.c',
	'aig/aig/aigPack.c',
	'aig/aig/aigPart.c',
	'aig/aig/aigPartReg.c',
	'aig/aig/aigPartSat.c',
	'aig/aig/aigRepr.c',
	'aig/aig/aigRet.c',
	'aig/aig/aigRetF.c',
	'aig/aig/aigScl.c',
	'aig/aig/aigShow.c',
	'aig/aig/aigSplit.c',
	'aig/aig/aigTable.c',
	'aig/aig/aigTiming.c',
	'aig/aig/aigTruth.c',
	'aig/aig/aigTsim.c',
	'aig/aig/aigUtil.c',
	'aig/aig/aigWin.c',
]
