sources += [
	'aig/gia/giaAig.c',
	'aig/gia/giaAgi.c',
	'aig/gia/giaAiger.c',
	'aig/gia/giaAigerExt.c',
	'aig/gia/giaBalAig.c',
	'aig/gia/giaBalLut.c',
	'aig/gia/giaBalMap.c',
	'aig/gia/giaBidec.c',
	'aig/gia/giaCCof.c',
	'aig/gia/giaCex.c',
	'aig/gia/giaClp.c',
	'aig/gia/giaCof.c',
	'aig/gia/giaCone.c',
	'aig/gia/giaCSatOld.c',
	'aig/gia/giaCSat.c',
	'aig/gia/giaCTas.c',
	'aig/gia/giaCut.c',
	'aig/gia/giaDfs.c',
	'aig/gia/giaDup.c',
	'aig/gia/giaEdge.c',
	'aig/gia/giaEmbed.c',
	'aig/gia/giaEnable.c',
	'aig/gia/giaEquiv.c',
	'aig/gia/giaEra.c',
	'aig/gia/giaEra2.c',
	'aig/gia/giaEsop.c',
	'aig/gia/giaFalse.c',
	'aig/gia/giaFanout.c',
	'aig/gia/giaForce.c',
	'aig/gia/giaFrames.c',
	'aig/gia/giaFront.c',
	'aig/gia/giaFx.c',
	'aig/gia/giaGig.c',
	'aig/gia/giaGlitch.c',
	'aig/gia/giaHash.c',
	'aig/gia/giaIf.c',
	'aig/gia/giaIff.c',
	'aig/gia/giaIso.c',
	'aig/gia/giaIso2.c',
	'aig/gia/giaIso3.c',
	'aig/gia/giaJf.c',
	'aig/gia/giaKf.c',
	'aig/gia/giaLf.c',
	'aig/gia/giaMf.c',
	'aig/gia/giaMan.c',
	'aig/gia/giaMem.c',
	'aig/gia/giaMfs.c',
	'aig/gia/giaMini.c',
	'aig/gia/giaMuxes.c',
	'aig/gia/giaNf.c',
	'aig/gia/giaOf.c',
	'aig/gia/giaPack.c',
	'aig/gia/giaPat.c',
	'aig/gia/giaPf.c',
	'aig/gia/giaQbf.c',
	'aig/gia/giaResub.c',
	'aig/gia/giaRetime.c',
	'aig/gia/giaRex.c',
	'aig/gia/giaSatEdge.c',
	'aig/gia/giaSatLE.c',
	'aig/gia/giaSatLut.c',
	'aig/gia/giaSatMap.c',
	'aig/gia/giaSatoko.c',
	'aig/gia/giaSat3.c',
	'aig/gia/giaScl.c',
	'aig/gia/giaScript.c',
	'aig/gia/giaShow.c',
	'aig/gia/giaShrink.c',
	'aig/gia/giaShrink6.c',
	'aig/gia/giaShrink7.c',
	'aig/gia/giaSim.c',
	'aig/gia/giaSim2.c',
	'aig/gia/giaSort.c',
	'aig/gia/giaSpeedup.c',
	'aig/gia/giaSplit.c',
	'aig/gia/giaStg.c',
	'aig/gia/giaStr.c',
	'aig/gia/giaSupMin.c',
	'aig/gia/giaSupp.c',
	'aig/gia/giaSweep.c',
	'aig/gia/giaSweeper.c',
	'aig/gia/giaSwitch.c',
	'aig/gia/giaTim.c',
	'aig/gia/giaTis.c',
	'aig/gia/giaTruth.c',
	'aig/gia/giaTsim.c',
	'aig/gia/giaUnate.c',
	'aig/gia/giaUtil.c',
]
