sources += [
	'aig/ivy/ivyBalance.c',
	'aig/ivy/ivyCanon.c',
	'aig/ivy/ivyCheck.c',
	'aig/ivy/ivyCut.c',
	'aig/ivy/ivyCutTrav.c',
	'aig/ivy/ivyDfs.c',
	'aig/ivy/ivyDsd.c',
	'aig/ivy/ivyFanout.c',
	'aig/ivy/ivyFastMap.c',
	'aig/ivy/ivyFraig.c',
	'aig/ivy/ivyHaig.c',
	'aig/ivy/ivyMan.c',
	'aig/ivy/ivyMem.c',
	'aig/ivy/ivyMulti.c',
	'aig/ivy/ivyObj.c',
	'aig/ivy/ivyOper.c',
	'aig/ivy/ivyResyn.c',
	'aig/ivy/ivyRwr.c',
	'aig/ivy/ivySeq.c',
	'aig/ivy/ivyShow.c',
	'aig/ivy/ivyTable.c',
	'aig/ivy/ivyUtil.c',
]
