sources += [
	'aig/saig/saigCone.c',
	'aig/saig/saigConstr.c',
	'aig/saig/saigConstr2.c',
	'aig/saig/saigDual.c',
	'aig/saig/saigDup.c',
	'aig/saig/saigInd.c',
	'aig/saig/saigIoa.c',
	'aig/saig/saigIso.c',
	'aig/saig/saigIsoFast.c',
	'aig/saig/saigIsoSlow.c',
	'aig/saig/saigMiter.c',
	'aig/saig/saigOutDec.c',
	'aig/saig/saigPhase.c',
	'aig/saig/saigRetFwd.c',
	'aig/saig/saigRetMin.c',
	'aig/saig/saigRetStep.c',
	'aig/saig/saigScl.c',
	'aig/saig/saigSimFast.c',
	'aig/saig/saigSimMv.c',
	'aig/saig/saigSimSeq.c',
	'aig/saig/saigStrSim.c',
	'aig/saig/saigSwitch.c',
	'aig/saig/saigSynch.c',
	'aig/saig/saigTempor.c',
	'aig/saig/saigTrans.c',
	'aig/saig/saigWnd.c',
]
