sources += [
	'base/abc/abcAig.c',
	'base/abc/abcBarBuf.c',
	'base/abc/abcBlifMv.c',
	'base/abc/abcCheck.c',
	'base/abc/abcDfs.c',
	'base/abc/abcFanio.c',
	'base/abc/abcFanOrder.c',
	'base/abc/abcFunc.c',
	'base/abc/abcHie.c',
	'base/abc/abcHieCec.c',
	'base/abc/abcHieGia.c',
	'base/abc/abcHieNew.c',
	'base/abc/abcLatch.c',
	'base/abc/abcLib.c',
	'base/abc/abcMinBase.c',
	'base/abc/abcNames.c',
	'base/abc/abcNetlist.c',
	'base/abc/abcNtk.c',
	'base/abc/abcObj.c',
	'base/abc/abcRefs.c',
	'base/abc/abcShow.c',
	'base/abc/abcSop.c',
	'base/abc/abcUtil.c',
]
