sources += [
	'base/abci/abc.c',
	'base/abci/abcAttach.c',
	'base/abci/abcAuto.c',
	'base/abci/abcBalance.c',
	'base/abci/abcBidec.c',
	'base/abci/abcBm.c',
	'base/abci/abcBmc.c',
	'base/abci/abcCas.c',
	'base/abci/abcCascade.c',
	'base/abci/abcCollapse.c',
	'base/abci/abcCut.c',
	'base/abci/abcDar.c',
	'base/abci/abcDebug.c',
	'base/abci/abcDec.c',
	'base/abci/abcDetect.c',
	'base/abci/abcDress.c',
	'base/abci/abcDress2.c',
	'base/abci/abcDress3.c',
	'base/abci/abcDsd.c',
	'base/abci/abcEco.c',
	'base/abci/abcExact.c',
	'base/abci/abcExtract.c',
	'base/abci/abcFraig.c',
	'base/abci/abcFx.c',
	'base/abci/abcFxu.c',
	'base/abci/abcGen.c',
	'base/abci/abcHaig.c',
	'base/abci/abcIf.c',
	'base/abci/abcIfif.c',
	'base/abci/abcIfMux.c',
	'base/abci/abcIvy.c',
	'base/abci/abcLog.c',
	'base/abci/abcLut.c',
	'base/abci/abcLutmin.c',
	'base/abci/abcMap.c',
	'base/abci/abcMerge.c',
	'base/abci/abcMfs.c',
	'base/abci/abcMini.c',
	'base/abci/abcMiter.c',
	'base/abci/abcMulti.c',
	'base/abci/abcNtbdd.c',
	'base/abci/abcNpn.c',
	'base/abci/abcNpnSave.c',
	'base/abci/abcOdc.c',
	'base/abci/abcOrder.c',
	'base/abci/abcPart.c',
	'base/abci/abcPrint.c',
	'base/abci/abcProve.c',
	'base/abci/abcQbf.c',
	'base/abci/abcQuant.c',
	'base/abci/abcRec3.c',
	'base/abci/abcReconv.c',
	'base/abci/abcReach.c',
	'base/abci/abcRefactor.c',
	'base/abci/abcRenode.c',
	'base/abci/abcReorder.c',
	'base/abci/abcRestruct.c',
	'base/abci/abcResub.c',
	'base/abci/abcRewrite.c',
	'base/abci/abcRpo.c',
	'base/abci/abcRr.c',
	'base/abci/abcSat.c',
	'base/abci/abcSaucy.c',
	'base/abci/abcScorr.c',
	'base/abci/abcSense.c',
	'base/abci/abcSpeedup.c',
	'base/abci/abcStrash.c',
	'base/abci/abcSweep.c',
	'base/abci/abcSymm.c',
	'base/abci/abcTim.c',
	'base/abci/abcTiming.c',
	'base/abci/abcUnate.c',
	'base/abci/abcUnreach.c',
	'base/abci/abcVerify.c',
	'base/abci/abcXsim.c',
]
