sources += [
	'base/io/io.c',
	'base/io/ioJson.c',
	'base/io/ioReadAiger.c',
	'base/io/ioReadBaf.c',
	'base/io/ioReadBblif.c',
	'base/io/ioReadBench.c',
	'base/io/ioReadBlif.c',
	'base/io/ioReadBlifAig.c',
	'base/io/ioReadBlifMv.c',
	'base/io/ioReadDsd.c',
	'base/io/ioReadEdif.c',
	'base/io/ioReadEqn.c',
	'base/io/ioReadPla.c',
	'base/io/ioReadPlaMo.c',
	'base/io/ioReadVerilog.c',
	'base/io/ioUtil.c',
	'base/io/ioWriteAiger.c',
	'base/io/ioWriteBaf.c',
	'base/io/ioWriteBblif.c',
	'base/io/ioWriteBench.c',
	'base/io/ioWriteBlif.c',
	'base/io/ioWriteBlifMv.c',
	'base/io/ioWriteBook.c',
	'base/io/ioWriteCnf.c',
	'base/io/ioWriteDot.c',
	'base/io/ioWriteEqn.c',
	'base/io/ioWriteGml.c',
	'base/io/ioWriteList.c',
	'base/io/ioWritePla.c',
	'base/io/ioWriteVerilog.c',
	'base/io/ioWriteSmv.c',
]
