sources += [
	'base/wlc/wlcAbs.c',
	'base/wlc/wlcAbs2.c',
	'base/wlc/wlcAbc.c',
	'base/wlc/wlcPth.c',
	'base/wlc/wlcBlast.c',
	'base/wlc/wlcCom.c',
	'base/wlc/wlcGraft.c',
	'base/wlc/wlcJson.c',
	'base/wlc/wlcNtk.c',
	'base/wlc/wlcReadSmt.c',
	'base/wlc/wlcReadVer.c',
	'base/wlc/wlcSim.c',
	'base/wlc/wlcShow.c',
	'base/wlc/wlcStdin.c',
	'base/wlc/wlcUif.c',
	'base/wlc/wlcWin.c',
	'base/wlc/wlcWriteVer.c',
]
