sources += [
	'bdd/cudd/cuddAPI.c',
	'bdd/cudd/cuddAddAbs.c',
	'bdd/cudd/cuddAddApply.c',
	'bdd/cudd/cuddAddFind.c',
	'bdd/cudd/cuddAddInv.c',
	'bdd/cudd/cuddAddIte.c',
	'bdd/cudd/cuddAddNeg.c',
	'bdd/cudd/cuddAddWalsh.c',
	'bdd/cudd/cuddAndAbs.c',
	'bdd/cudd/cuddAnneal.c',
	'bdd/cudd/cuddApa.c',
	'bdd/cudd/cuddApprox.c',
	'bdd/cudd/cuddBddAbs.c',
	'bdd/cudd/cuddBddCorr.c',
	'bdd/cudd/cuddBddIte.c',
	'bdd/cudd/cuddBridge.c',
	'bdd/cudd/cuddCache.c',
	'bdd/cudd/cuddCheck.c',
	'bdd/cudd/cuddClip.c',
	'bdd/cudd/cuddCof.c',
	'bdd/cudd/cuddCompose.c',
	'bdd/cudd/cuddDecomp.c',
	'bdd/cudd/cuddEssent.c',
	'bdd/cudd/cuddExact.c',
	'bdd/cudd/cuddExport.c',
	'bdd/cudd/cuddGenCof.c',
	'bdd/cudd/cuddGenetic.c',
	'bdd/cudd/cuddGroup.c',
	'bdd/cudd/cuddHarwell.c',
	'bdd/cudd/cuddInit.c',
	'bdd/cudd/cuddInteract.c',
	'bdd/cudd/cuddLCache.c',
	'bdd/cudd/cuddLevelQ.c',
	'bdd/cudd/cuddLinear.c',
	'bdd/cudd/cuddLiteral.c',
	'bdd/cudd/cuddMatMult.c',
	'bdd/cudd/cuddPriority.c',
	'bdd/cudd/cuddRead.c',
	'bdd/cudd/cuddRef.c',
	'bdd/cudd/cuddReorder.c',
	'bdd/cudd/cuddSat.c',
	'bdd/cudd/cuddSign.c',
	'bdd/cudd/cuddSolve.c',
	'bdd/cudd/cuddSplit.c',
	'bdd/cudd/cuddSubsetHB.c',
	'bdd/cudd/cuddSubsetSP.c',
	'bdd/cudd/cuddSymmetry.c',
	'bdd/cudd/cuddTable.c',
	'bdd/cudd/cuddUtil.c',
	'bdd/cudd/cuddWindow.c',
	'bdd/cudd/cuddZddCount.c',
	'bdd/cudd/cuddZddFuncs.c',
	'bdd/cudd/cuddZddGroup.c',
	'bdd/cudd/cuddZddIsop.c',
	'bdd/cudd/cuddZddLin.c',
	'bdd/cudd/cuddZddMisc.c',
	'bdd/cudd/cuddZddPort.c',
	'bdd/cudd/cuddZddReord.c',
	'bdd/cudd/cuddZddSetop.c',
	'bdd/cudd/cuddZddSymm.c',
	'bdd/cudd/cuddZddUtil.c',
]
