sources += [
	'bdd/llb/llb1Cluster.c',
	'bdd/llb/llb1Constr.c',
	'bdd/llb/llb1Core.c',
	'bdd/llb/llb1Group.c',
	'bdd/llb/llb1Hint.c',
	'bdd/llb/llb1Man.c',
	'bdd/llb/llb1Matrix.c',
	'bdd/llb/llb1Pivot.c',
	'bdd/llb/llb1Reach.c',
	'bdd/llb/llb1Sched.c',
	'bdd/llb/llb2Bad.c',
	'bdd/llb/llb2Core.c',
	'bdd/llb/llb2Driver.c',
	'bdd/llb/llb2Dump.c',
	'bdd/llb/llb2Flow.c',
	'bdd/llb/llb2Image.c',
	'bdd/llb/llb3Image.c',
	'bdd/llb/llb3Nonlin.c',
	'bdd/llb/llb4Cex.c',
	'bdd/llb/llb4Image.c',
	'bdd/llb/llb4Nonlin.c',
	'bdd/llb/llb4Sweep.c',
]
