sources += [
	'map/if/ifCom.c',
	'map/if/ifCache.c',
	'map/if/ifCore.c',
	'map/if/ifCut.c',
	'map/if/ifData2.c',
	'map/if/ifDec07.c',
	'map/if/ifDec08.c',
	'map/if/ifDec10.c',
	'map/if/ifDec16.c',
	'map/if/ifDec75.c',
	'map/if/ifDelay.c',
	'map/if/ifDsd.c',
	'map/if/ifLibBox.c',
	'map/if/ifLibLut.c',
	'map/if/ifMan.c',
	'map/if/ifMap.c',
	'map/if/ifMatch2.c',
	'map/if/ifReduce.c',
	'map/if/ifSat.c',
	'map/if/ifSelect.c',
	'map/if/ifSeq.c',
	'map/if/ifTest.c',
	'map/if/ifTime.c',
	'map/if/ifTruth.c',
	'map/if/ifTune.c',
	'map/if/ifUtil.c',
]
