sources += [
	'map/mapper/mapper.c',
	'map/mapper/mapperCanon.c',
	'map/mapper/mapperCore.c',
	'map/mapper/mapperCreate.c',
	'map/mapper/mapperCut.c',
	'map/mapper/mapperCutUtils.c',
	'map/mapper/mapperLib.c',
	'map/mapper/mapperMatch.c',
	'map/mapper/mapperRefs.c',
	'map/mapper/mapperSuper.c',
	'map/mapper/mapperSwitch.c',
	'map/mapper/mapperTable.c',
	'map/mapper/mapperTime.c',
	'map/mapper/mapperTree.c',
	'map/mapper/mapperTruth.c',
	'map/mapper/mapperUtils.c',
	'map/mapper/mapperVec.c',
]
