sources += [
	'misc/espresso/cofactor.c',
	'misc/espresso/cols.c',
	'misc/espresso/compl.c',
	'misc/espresso/contain.c',
	'misc/espresso/cubehack.c',
	'misc/espresso/cubestr.c',
	'misc/espresso/cvrin.c',
	'misc/espresso/cvrm.c',
	'misc/espresso/cvrmisc.c',
	'misc/espresso/cvrout.c',
	'misc/espresso/dominate.c',
	'misc/espresso/equiv.c',
	'misc/espresso/espresso.c',
	'misc/espresso/essen.c',
	'misc/espresso/exact.c',
	'misc/espresso/expand.c',
	'misc/espresso/gasp.c',
	'misc/espresso/gimpel.c',
	'misc/espresso/globals.c',
	'misc/espresso/hack.c',
	'misc/espresso/indep.c',
	'misc/espresso/irred.c',
	'misc/espresso/map.c',
	'misc/espresso/matrix.c',
	'misc/espresso/mincov.c',
	'misc/espresso/opo.c',
	'misc/espresso/pair.c',
	'misc/espresso/part.c',
	'misc/espresso/primes.c',
	'misc/espresso/reduce.c',
	'misc/espresso/rows.c',
	'misc/espresso/set.c',
	'misc/espresso/setc.c',
	'misc/espresso/sharp.c',
	'misc/espresso/sminterf.c',
	'misc/espresso/solution.c',
	'misc/espresso/sparse.c',
	'misc/espresso/unate.c',
	'misc/espresso/verify.c',
]
