sources += [
	'misc/extra/extraUtilBitMatrix.c',
	'misc/extra/extraUtilCanon.c',
	'misc/extra/extraUtilCube.c',
	'misc/extra/extraUtilDsd.c',
	'misc/extra/extraUtilEnum.c',
	'misc/extra/extraUtilFile.c',
	'misc/extra/extraUtilMemory.c',
	'misc/extra/extraUtilMisc.c',
	'misc/extra/extraUtilPerm.c',
	'misc/extra/extraUtilProgress.c',
	'misc/extra/extraUtilReader.c',
	'misc/extra/extraUtilSupp.c',
	'misc/extra/extraUtilTruth.c',
	'misc/extra/extraUtilUtil.c',
]
