sources += [
	'misc/mvc/mvcApi.c',
	'misc/mvc/mvcCompare.c',
	'misc/mvc/mvcContain.c',
	'misc/mvc/mvcCover.c',
	'misc/mvc/mvcCube.c',
	'misc/mvc/mvcDivide.c',
	'misc/mvc/mvcDivisor.c',
	'misc/mvc/mvcList.c',
	'misc/mvc/mvcLits.c',
	'misc/mvc/mvcMan.c',
	'misc/mvc/mvcOpAlg.c',
	'misc/mvc/mvcOpBool.c',
	'misc/mvc/mvcPrint.c',
	'misc/mvc/mvcSort.c',
	'misc/mvc/mvcUtils.c',
]
