sources += [
	'phys/place/place_base.c',
	'phys/place/place_bin.c',
	'phys/place/place_genqp.c',
	'phys/place/place_gordian.c',
	'phys/place/place_legalize.c',
	'phys/place/place_pads.c',
	'phys/place/place_partition.c',
	'phys/place/place_qpsolver.c',
	'phys/place/place_io.c',
	'phys/place/place_inc.c',
]
