sources += [
	'proof/acec/acecCl.c',
	'proof/acec/acecCore.c',
	'proof/acec/acecCo.c',
	'proof/acec/acecBo.c',
	'proof/acec/acecRe.c',
	'proof/acec/acecPa.c',
	'proof/acec/acecPo.c',
	'proof/acec/acecPool.c',
	'proof/acec/acecCover.c',
	'proof/acec/acecFadds.c',
	'proof/acec/acecMult.c',
	'proof/acec/acecNorm.c',
	'proof/acec/acecOrder.c',
	'proof/acec/acecPolyn.c',
	'proof/acec/acecSt.c',
	'proof/acec/acecTree.c',
	'proof/acec/acecUtil.c',
	'proof/acec/acec2Mult.c',
	'proof/acec/acecXor.c',
]
