sources += [
	'proof/fra/fraBmc.c',
	'proof/fra/fraCec.c',
	'proof/fra/fraClass.c',
	'proof/fra/fraClau.c',
	'proof/fra/fraClaus.c',
	'proof/fra/fraCnf.c',
	'proof/fra/fraCore.c',
	'proof/fra/fraHot.c',
	'proof/fra/fraImp.c',
	'proof/fra/fraInd.c',
	'proof/fra/fraIndVer.c',
	'proof/fra/fraLcr.c',
	'proof/fra/fraMan.c',
	'proof/fra/fraPart.c',
	'proof/fra/fraSat.c',
	'proof/fra/fraSec.c',
	'proof/fra/fraSim.c',
]
