sources += [
	'proof/fraig/fraigApi.c',
	'proof/fraig/fraigCanon.c',
	'proof/fraig/fraigFanout.c',
	'proof/fraig/fraigFeed.c',
	'proof/fraig/fraigMan.c',
	'proof/fraig/fraigMem.c',
	'proof/fraig/fraigNode.c',
	'proof/fraig/fraigPrime.c',
	'proof/fraig/fraigSat.c',
	'proof/fraig/fraigTable.c',
	'proof/fraig/fraigUtil.c',
	'proof/fraig/fraigVec.c',
]
