sources += [
	'proof/ssw/sswAig.c',
	'proof/ssw/sswBmc.c',
	'proof/ssw/sswClass.c',
	'proof/ssw/sswCnf.c',
	'proof/ssw/sswConstr.c',
	'proof/ssw/sswCore.c',
	'proof/ssw/sswDyn.c',
	'proof/ssw/sswFilter.c',
	'proof/ssw/sswIslands.c',
	'proof/ssw/sswLcorr.c',
	'proof/ssw/sswMan.c',
	'proof/ssw/sswPart.c',
	'proof/ssw/sswPairs.c',
	'proof/ssw/sswRarity.c',
	'proof/ssw/sswSat.c',
	'proof/ssw/sswSemi.c',
	'proof/ssw/sswSim.c',
	'proof/ssw/sswSimSat.c',
	'proof/ssw/sswSweep.c',
	'proof/ssw/sswUnique.c',
]
