sources += [
	'sat/bmc/bmcBCore.c',
	'sat/bmc/bmcBmc.c',
	'sat/bmc/bmcBmc2.c',
	'sat/bmc/bmcBmc3.c',
	'sat/bmc/bmcBmcAnd.c',
	'sat/bmc/bmcBmci.c',
	'sat/bmc/bmcCexCare.c',
	'sat/bmc/bmcCexCut.c',
	'sat/bmc/bmcCexDepth.c',
	'sat/bmc/bmcCexMin1.c',
	'sat/bmc/bmcCexMin2.c',
	'sat/bmc/bmcCexTools.c',
	'sat/bmc/bmcChain.c',
	'sat/bmc/bmcClp.c',
	'sat/bmc/bmcEco.c',
	'sat/bmc/bmcExpand.c',
	'sat/bmc/bmcFault.c',
	'sat/bmc/bmcFx.c',
	'sat/bmc/bmcGen.c',
	'sat/bmc/bmcICheck.c',
	'sat/bmc/bmcInse.c',
	'sat/bmc/bmcLoad.c',
	'sat/bmc/bmcMaxi.c',
	'sat/bmc/bmcMesh.c',
	'sat/bmc/bmcMesh2.c',
	'sat/bmc/bmcMulti.c',
	'sat/bmc/bmcUnroll.c',
]
